--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,28 +13,25 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the app image
-      run: docker build --file Dockerfile --tag devops-project:$(date +%s) --target devops-project .
+      run: docker build --file Dockerfile --tag devops-project:latest --target devops-project .
 
   run-app:
     needs: build-app
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
     - name: Run the app image
-      run: docker run --name=devops-project -d --network host devops-project
+      run: docker run --name=devops-project -d --network host devops-project:latest
  
   build-tests:
     needs: run-app
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
     - name: Build the tests image
-      run: docker build --file Dockerfile --tag devops-project-test:$(date +%s) --target devops-project-test .
+      run: docker build --file Dockerfile --tag devops-project-test:latest --target devops-project-test .
 
   run-tests:
     needs: build-tests
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
     - name: Run the tests image
-      run: docker run --name=devops-project-test -d --network host devops-project-test
+      run: docker run --name=devops-project-test -d --network host devops-project-test:latest
