--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,7 @@
-name: Docker Image CI
-
+name: Production & Tests
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "dev"]
   pull_request:
     branches: ["main"]
 
@@ -12,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Pylint
+      run: pylint --disable=C,R $(git ls-files '*.py')
     - name: Build the app image
       run: docker build --file Dockerfile --tag devops-project:latest --target devops-project .
     - name: Run the app image
