--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install Pylint
+      run: pip install pylint
     - name: Pylint
       run: echo "Running Pylint..." && pylint --disable=C,R $(git ls-files '*.py')
     - name: Build the app image
